objects/LOLMyLinksCalloutSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom settings for calling the My Links web services</description>
    <fields>
        <fullName>ExternalUserProfileURL__c</fullName>
        <description>URL for routing an external user to their EMS user profile</description>
        <label>ExternalUserProfileURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>InternalUserProfileURL__c</fullName>
        <description>URL for an Internal person to access their user profile</description>
        <label>InternalUserProfileURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WebSericeBaseURL__c</fullName>
        <description>Base URL for calling web services associated with My Links</description>
        <label>WebSericeBaseURL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WebServiceLoginId__c</fullName>
        <description>Login ID for the web services associated with My Links</description>
        <label>WebServiceLoginId</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebServicePassword__c</fullName>
        <description>Web Service password for calling web services associated with My Links</description>
        <label>WebServicePassword</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActiveSetting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the currently active custom setting</description>
        <label>isActiveSetting</label>
        <type>Checkbox</type>
    </fields>
    <label>LOLMyLinksCalloutSettings</label>
</CustomObject>